# BookmarkGPT

./: README.md  Step1_ParseBookmarks.ipynb  Step2_RAG.ipynb  pyproject.toml
bookmarks/: bookmarks_11_12_23.html
