[tool.poetry]
name = "bookmarkgpt"
version = "0.1.0"
description = "This is a POC project integrate LLM, RAG, and ChromeBookmarks"
authors = ["spark <linhots.tsao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pandas = "^2.1.3"
bs4 = "^0.0.1"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
lancedb = "^0.3.3"
sentence-transformers = "^2.2.2"
numpy = "^1.26.1"
openai = "0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
